fix: admin login routes & openapi spec
